// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle renders correctly 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-13wfq9z-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1fqyjci-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1fqyjci-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-1fqyjci-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1fqyjci-StyledToggle:focus-within,
.cache-1fqyjci-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1fqyjci-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1fqyjci-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1fqyjci-StyledToggle[data-checked='true']:hover {
  background-color: #3b1a61;
}

.cache-1fqyjci-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1fqyjci-StyledToggle[data-checked='true']:focus-within,
.cache-1fqyjci-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1fqyjci-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1fqyjci-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="cache-13wfq9z-Stack ehpbis70"
    />
    <div
      class="cache-1fqyjci-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":r0:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly label 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-13wfq9z-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-1fqyjci-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1fqyjci-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-1fqyjci-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1fqyjci-StyledToggle:focus-within,
.cache-1fqyjci-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1fqyjci-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1fqyjci-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1fqyjci-StyledToggle[data-checked='true']:hover {
  background-color: #3b1a61;
}

.cache-1fqyjci-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1fqyjci-StyledToggle[data-checked='true']:focus-within,
.cache-1fqyjci-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1fqyjci-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1fqyjci-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="cache-13wfq9z-Stack ehpbis70"
    >
      <div
        class="cache-15fwcc4-StyledRow e3f5lzv0"
      >
        This is a label
      </div>
    </div>
    <div
      class="cache-1fqyjci-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":rc:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when checked 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-13wfq9z-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1fqyjci-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1fqyjci-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-1fqyjci-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1fqyjci-StyledToggle:focus-within,
.cache-1fqyjci-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1fqyjci-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1fqyjci-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1fqyjci-StyledToggle[data-checked='true']:hover {
  background-color: #3b1a61;
}

.cache-1fqyjci-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1fqyjci-StyledToggle[data-checked='true']:focus-within,
.cache-1fqyjci-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1fqyjci-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1fqyjci-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="cache-13wfq9z-Stack ehpbis70"
    />
    <div
      class="cache-1fqyjci-StyledToggle e1wstm612"
      data-checked="true"
      data-disabled="false"
    >
      <input
        aria-checked="true"
        checked=""
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":r2:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-13wfq9z-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1fqyjci-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1fqyjci-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-1fqyjci-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1fqyjci-StyledToggle:focus-within,
.cache-1fqyjci-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1fqyjci-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1fqyjci-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1fqyjci-StyledToggle[data-checked='true']:hover {
  background-color: #3b1a61;
}

.cache-1fqyjci-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1fqyjci-StyledToggle[data-checked='true']:focus-within,
.cache-1fqyjci-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1fqyjci-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1fqyjci-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="true"
    class="cache-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="cache-13wfq9z-Stack ehpbis70"
    />
    <div
      class="cache-1fqyjci-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="true"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        disabled=""
        id=":r4:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when required with label 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-13wfq9z-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-8ikytl-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.cache-1fqyjci-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1fqyjci-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-1fqyjci-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1fqyjci-StyledToggle:focus-within,
.cache-1fqyjci-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1fqyjci-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1fqyjci-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1fqyjci-StyledToggle[data-checked='true']:hover {
  background-color: #3b1a61;
}

.cache-1fqyjci-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1fqyjci-StyledToggle[data-checked='true']:focus-within,
.cache-1fqyjci-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1fqyjci-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1fqyjci-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="cache-13wfq9z-Stack ehpbis70"
    >
      <div
        class="cache-15fwcc4-StyledRow e3f5lzv0"
      >
        test
        <sup>
          <svg
            class="cache-8ikytl-sizeStyles e1gt4cfo0"
            viewBox="0 0 24 24"
          >
            <path
              d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
            />
          </svg>
        </sup>
      </div>
    </div>
    <div
      class="cache-1fqyjci-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":r6:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when required with label left 1`] = `
<DocumentFragment>
  .cache-1gksb9y-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.cache-1gksb9y-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-1gksb9y-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-13wfq9z-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-8ikytl-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.cache-1fqyjci-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1fqyjci-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-1fqyjci-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1fqyjci-StyledToggle:focus-within,
.cache-1fqyjci-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1fqyjci-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1fqyjci-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1fqyjci-StyledToggle[data-checked='true']:hover {
  background-color: #3b1a61;
}

.cache-1fqyjci-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1fqyjci-StyledToggle[data-checked='true']:focus-within,
.cache-1fqyjci-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1fqyjci-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1fqyjci-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-1gksb9y-StyledLabel e1wstm610"
  >
    <div
      class="cache-13wfq9z-Stack ehpbis70"
    >
      <div
        class="cache-15fwcc4-StyledRow e3f5lzv0"
      >
        test
        <sup>
          <svg
            class="cache-8ikytl-sizeStyles e1gt4cfo0"
            viewBox="0 0 24 24"
          >
            <path
              d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
            />
          </svg>
        </sup>
      </div>
    </div>
    <div
      class="cache-1fqyjci-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":r8:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with complex label 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-13wfq9z-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-1fqyjci-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1fqyjci-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-1fqyjci-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1fqyjci-StyledToggle:focus-within,
.cache-1fqyjci-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1fqyjci-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1fqyjci-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1fqyjci-StyledToggle[data-checked='true']:hover {
  background-color: #3b1a61;
}

.cache-1fqyjci-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1fqyjci-StyledToggle[data-checked='true']:focus-within,
.cache-1fqyjci-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1fqyjci-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1fqyjci-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="cache-13wfq9z-Stack ehpbis70"
    >
      <div
        class="cache-15fwcc4-StyledRow e3f5lzv0"
      >
        <span>
          Custom label rendered
        </span>
      </div>
    </div>
    <div
      class="cache-1fqyjci-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":ri:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with custom labels on right 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-13wfq9z-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-1fqyjci-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1fqyjci-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-1fqyjci-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1fqyjci-StyledToggle:focus-within,
.cache-1fqyjci-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1fqyjci-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1fqyjci-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1fqyjci-StyledToggle[data-checked='true']:hover {
  background-color: #3b1a61;
}

.cache-1fqyjci-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1fqyjci-StyledToggle[data-checked='true']:focus-within,
.cache-1fqyjci-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1fqyjci-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1fqyjci-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="cache-13wfq9z-Stack ehpbis70"
    >
      <div
        class="cache-15fwcc4-StyledRow e3f5lzv0"
      >
        This is a label
      </div>
    </div>
    <div
      class="cache-1fqyjci-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":rg:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with helper 1`] = `
<DocumentFragment>
  .cache-r95p0q-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-r95p0q-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-r95p0q-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-13wfq9z-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-5q2bke-StyledText {
  color: #727683;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1fqyjci-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1fqyjci-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-1fqyjci-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1fqyjci-StyledToggle:focus-within,
.cache-1fqyjci-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1fqyjci-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1fqyjci-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1fqyjci-StyledToggle[data-checked='true']:hover {
  background-color: #3b1a61;
}

.cache-1fqyjci-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1fqyjci-StyledToggle[data-checked='true']:focus-within,
.cache-1fqyjci-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1fqyjci-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1fqyjci-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-r95p0q-StyledLabel e1wstm610"
  >
    <div
      class="cache-13wfq9z-Stack ehpbis70"
    >
      <div
        class="cache-15fwcc4-StyledRow e3f5lzv0"
      >
        This is a label
      </div>
      <p
        class="cache-5q2bke-StyledText e13y3mga0"
      >
        This is a helper
      </p>
    </div>
    <div
      class="cache-1fqyjci-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":rm:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with labels on left 1`] = `
<DocumentFragment>
  .cache-1gksb9y-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.cache-1gksb9y-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-1gksb9y-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-13wfq9z-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-15fwcc4-StyledRow {
  display: grid;
  grid-template-columns: auto 1fr;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-1fqyjci-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1fqyjci-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-1fqyjci-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1fqyjci-StyledToggle:focus-within,
.cache-1fqyjci-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1fqyjci-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1fqyjci-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1fqyjci-StyledToggle[data-checked='true']:hover {
  background-color: #3b1a61;
}

.cache-1fqyjci-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1fqyjci-StyledToggle[data-checked='true']:focus-within,
.cache-1fqyjci-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1fqyjci-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-1fqyjci-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-1gksb9y-StyledLabel e1wstm610"
  >
    <div
      class="cache-13wfq9z-Stack ehpbis70"
    >
      <div
        class="cache-15fwcc4-StyledRow e3f5lzv0"
      >
        This is a label
      </div>
    </div>
    <div
      class="cache-1fqyjci-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":re:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with non default size 1`] = `
<DocumentFragment>
  .cache-hfh15c-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.cache-hfh15c-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 16.53px;
}

.cache-hfh15c-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-13wfq9z-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-u2ifpt-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 40px;
  height: 20px;
}

.cache-u2ifpt-StyledToggle:hover {
  background-color: #d9dadd;
}

.cache-u2ifpt-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 12px;
  height: 12px;
  border-radius: 100%;
  background-color: #ffffff;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-u2ifpt-StyledToggle:focus-within,
.cache-u2ifpt-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-u2ifpt-StyledToggle[data-disabled='false']:active:after {
  width: 16.53px;
}

.cache-u2ifpt-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-u2ifpt-StyledToggle[data-checked='true']:hover {
  background-color: #3b1a61;
}

.cache-u2ifpt-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-u2ifpt-StyledToggle[data-checked='true']:focus-within,
.cache-u2ifpt-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-u2ifpt-StyledToggle[data-disabled='true'] {
  background: #f3f3f4;
}

.cache-u2ifpt-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e5dbfd;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-hfh15c-StyledLabel e1wstm610"
  >
    <div
      class="cache-13wfq9z-Stack ehpbis70"
    />
    <div
      class="cache-u2ifpt-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":ra:"
        name="test"
        type="checkbox"
        value=""
      />
    </div>
  </label>
</DocumentFragment>
`;
